// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@jscutlery/semver @jscutlery/semver:version when libs/a changed (breaking change) should generate CHANGELOG.md 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

# [1.0.0](/compare/a-0.1.0...a-1.0.0) (yyyy-mm-dd)


### Features

* **a:** 🚀 new feature xxxxxxx


### BREAKING CHANGES

* **a:** 🚨 Breaking change description



# 0.1.0 (yyyy-mm-dd)


### Bug Fixes

* **a:** 🐞 fix bug xxxxxxx


### Features

* **a:** 🚀 new feature xxxxxxx
"
`;

exports[`@jscutlery/semver @jscutlery/semver:version when libs/a changed should generate CHANGELOG.md 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

# 0.1.0 (yyyy-mm-dd)


### Bug Fixes

* **a:** 🐞 fix bug xxxxxxx


### Features

* **a:** 🚀 new feature xxxxxxx
"
`;

exports[`@jscutlery/semver @jscutlery/semver:version when libs/b changed (with --skipCommit) should generate CHANGELOG.md 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

## [0.2.0](///compare/b-0.1.0...b-0.2.0) (yyyy-mm-dd)


### Features

* **b:** 🚀 new feature xxxxxxx

## 0.1.0 (yyyy-mm-dd)


### Features

* **b:** 🚀 new feature xxxxxxx


### Bug Fixes

* **b:** 🐞 fix bug xxxxxxx
"
`;

exports[`@jscutlery/semver @jscutlery/semver:version when libs/b changed should generate CHANGELOG.md 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

## 0.1.0 (yyyy-mm-dd)


### Features

* **b:** 🚀 new feature xxxxxxx


### Bug Fixes

* **b:** 🐞 fix bug xxxxxxx
"
`;

exports[`@jscutlery/semver @jscutlery/semver:version when libs/d changed should generate CHANGELOG.md 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

## 0.0.0 (yyyy-mm-dd)


### Awesome features

* **d:** 🚀 new awesome feature xxxxxxx
"
`;
